--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-modal": "^3.16.1",
     "react-use": "^17.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
